sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:11: error: not found: value bubbleSort
      bubbleSort();
      ^